<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <!-- Home -->
    <fragment
        android:id="@+id/nav_home"
        android:name="ca.visionassistinnovators.it.smartassistivesystem.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <!-- Alerts -->
    <fragment
        android:id="@+id/nav_alerts"
        android:name="ca.visionassistinnovators.it.smartassistivesystem.ui.alerts.AlertFragment"
        android:label="@string/alerts_"
        tools:layout="@layout/fragment_alerts" />

    <!-- Sensors -->
    <fragment
        android:id="@+id/nav_sensors"
        android:name="ca.visionassistinnovators.it.smartassistivesystem.ui.sensors.SensorFragment"
        android:label="@string/menu_sensors"
        tools:layout="@layout/fragment_sensors" />

    <!-- Feedback -->
    <fragment
        android:id="@+id/nav_feedback"
        android:name="ca.visionassistinnovators.it.smartassistivesystem.ui.feedback.FeedbackFragment"
        android:label="@string/feedback"
        tools:layout="@layout/fragment_feedback" />

    <!-- Profile -->
    <fragment
        android:id="@+id/nav_profile"
        android:name="ca.visionassistinnovators.it.smartassistivesystem.ui.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" />

    <!-- About -->
    <fragment
        android:id="@+id/nav_about"
        android:name="ca.visionassistinnovators.it.smartassistivesystem.ui.about.AboutFragment"
        android:label="About"
        tools:layout="@layout/fragment_about" />

    <!-- Settings -->
    <fragment
        android:id="@+id/nav_settings"
        android:name="ca.visionassistinnovators.it.smartassistivesystem.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <!-- Magnifier -->
    <fragment
        android:id="@+id/navigation_location"
        android:name="ca.visionassistinnovators.it.smartassistivesystem.ui.location.PatientLocationFragment"
        android:label="Patient Location"
        tools:layout="@layout/fragment_patient_location" />


    <!-- Patients / SOS -->
    <fragment
        android:id="@+id/nav_sos"
        android:name="ca.visionassistinnovators.it.smartassistivesystem.ui.patients.SosFragment"
        android:label="Patients"
        tools:layout="@layout/fragment_sos" />

    <!-- Fall Detection -->
    <fragment
        android:id="@+id/nav_fall_detection"
        android:name="ca.visionassistinnovators.it.smartassistivesystem.ui.detection.FallDetectionFragment"
        android:label="Fall Detection" />

    <!-- Help -->
    <fragment
        android:id="@+id/nav_help"
        android:name="ca.visionassistinnovators.it.smartassistivesystem.ui.help.HelpFragment"
        android:label="Help"
        tools:layout="@layout/fragment_help" />

</navigation>
